# libbitset

./: CMakeLists.txt
include/bitset/: bitset.h
src/: BitSet.hs  bitset.c
